<resources>
    <string name="app_name">Stones App</string>
    <string name="title">Stones</string>
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="info">Information</string>
    <string name="exit">Exit</string>
    <string name="configuration">Configuration</string>
    <string name="information">Information</string>
    <string name="actionMenu_config">Configuration</string>
    <string name="action_info">Information</string>
</resources>
